--- a/app/sass/pages/_plan_destinasi.scss
+++ b/app/sass/pages/_plan_destinasi.scss
@@ -393,8 +393,15 @@
   }
   .button-place{
     margin-top: 24px;
+    margin-left: -15px;
+    margin-right: -15px;
     .btn-add{
       margin-top: 0px;
+    }
+    & > div {
+      & + div {
+        margin-top: 16px;
+      }
     }
     button{
       width: 100%;
