--- a/app/views/plan_destinasi_next.html
+++ b/app/views/plan_destinasi_next.html
@@ -146,13 +146,19 @@
               </div>
 
               <div class="row button-place">
-                <div class="col-md-9">
+                <div class="col-md-4">
                   <button class="btn btn-add btn-js-action" data-action="open-modal" data-actionFor="modal-plan-destinasi">
                     <span class="ico--plus"></span>
                     <p class="btn--text">Tambah Destinasi</p>
                   </button>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
+                  <button class="btn btn-add btn-js-action" data-action="open-modal" data-actionFor="modal-plan-destinasi">
+                    <span class="ico--plus"></span>
+                    <p class="btn--text">Tambah Resto</p>
+                  </button>
+                </div>
+                <div class="col-md-4">
                     <button class="btn btn--blue btn--medium">LANJUTKAN</button>
                 </div>
               </div>
