--- a/app/sass/pages/_plan_destinasi.scss
+++ b/app/sass/pages/_plan_destinasi.scss
@@ -301,6 +301,9 @@
       &.pembayaran--cart{
         height: 57px;
       }
+      .social-share-container{
+        display: none ; 
+      }
     }
   }
   .pd-cp-box{
