--- a/app/views/itinerary.html
+++ b/app/views/itinerary.html
@@ -43,7 +43,7 @@
                   <div class="img-square-box">
                     <img src="./images/dummy/hotel.jpg" alt="hotel">
                   </div>
-                  <div class="point-square point-square-bottom">
+                  <div class="point-square point-square-bottom" data-icon="ic-car.svg" data-text="9km (30menit)">
 
                   </div>
                 </div>
