--- a/app/views/detail_opentrip.html
+++ b/app/views/detail_opentrip.html
@@ -157,7 +157,7 @@
                               </select>
                             </div>
                           </div>
-                          <button class="btn btn--blue btn--medium">Choose</button>
+                          <button class="btn btn--blue btn--medium" data-action="toggle-options"><div>Choose</div><div class="ico"></div></button>
                     </div>
                   </div>
                 </div>
