--- a/app/views/itinerary.html
+++ b/app/views/itinerary.html
@@ -1,7 +1,7 @@
 <div class="container itinerary container--full grey">
   <div class="container container-body plan-destinasi">
     <div class="plan-destinasi-body">
-      <div class="word-navigation">
+      <div class="word-navigation" data-for=".plan-destinasi-mb-inner">
         <ul>
           <li class="active">Itinerary</li>
           <li>Informasi tambahan</li>
@@ -35,8 +35,8 @@
             </div>
           </div>
         </div>
-        <div class="plan-destinasi-main-body">
-          <div class="plan-destinasi-mb-inner">
+        <div class="plan-destinasi-main-body word-navigation-body">
+          <div class="plan-destinasi-mb-inner active">
             <div class="itn-body-box">
               <div class="row">
                 <div class="col-md-3">
@@ -134,6 +134,59 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="plan-destinasi-mb-inner">
+              <div class="ccw-body">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="ccw-ico">
+                      <img src="./images/icon/ic-facilities.svg" alt="">
+                      <p>Fasilitas</p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <ul>
+                      <li>Tiket masuk untuk satu orang</li>
+                      <li>Parkir gratis</li>
+                      <li>Kolam renang</li>
+                      <li>Teropong bintang</li>
+                      <li>Peta lokasi</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="ccw-body">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="ccw-ico">
+                      <img src="./images/icon/ic-umbrella.svg" alt="">
+                      <p>Perlengkapan Tambahan</p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <ul>
+                      <li>Tiket masuk untuk satu orang</li>
+                      <li>Parkir gratis</li>
+                      <li>Kolam renang</li>
+                      <li>Teropong bintang</li>
+                      <li>Peta lokasi</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+          </div>
+          <div class="plan-destinasi-mb-inner">
+            <div class="ccw-body terms">
+              <h5>Vulputate Sit</h5>
+              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nulla vitae elit libero, a pharetra augue. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+Donec id elit non mi porta gravida at eget metus. Sed posuere consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas faucibus mollis interdum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+              <h5>Condimentum Ipsum Pharetra</h5>
+              <p>Vestibulum id ligula porta felis euismod semper. Nullam id dolor id nibh ultricies vehicula ut id elit. Aenean lacinia bibendum nulla sed consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Sed posuere consectetur est at lobortis.
+
+Cras justo odio, dapibus ac facilisis in, egestas eget quam. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo.
+
+Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Vestibulum id ligula porta felis euismod semper. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
             </div>
           </div>
         </div>
