--- a/app/views/detail_opentrip.html
+++ b/app/views/detail_opentrip.html
@@ -3,7 +3,7 @@
 <script src="js/plugins/daterangepicker.js" charset="utf-8"></script>
 <script src="js/view/detail_atraksi.js" ></script>
 <script src="js/view/detail_opentrip.js" ></script>
-<div class="detail-container container container--full grey">
+<div id="detail--containers" class="detail-container container container--full grey">
   <div class="detail-head op-detail__head" style="background-image:url('./images/opentrip_bg.jpeg')">
     <div class="videobackground">
         <iframe
@@ -76,6 +76,24 @@
             </div>
             <div class="ddesc-content">
               <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
+              <p>Tangkuban Parahu atau Gunung Tangkuban Perahu adalah salah satu gunung yang terletak di Provinsi Jawa Barat, Indonesia. Sekitar 20 km ke arah utara Kota Bandung, dengan rimbun pohon pinus dan hamparan kebun teh di sekitarnya, Gunung Tangkuban Perahu mempunyai ketinggian setinggi 2.084 meter. Bentuk gunung ini adalah Stratovulcano dengan pusat erupsi yang berpindah dari timur ke barat.</p>
             </div>
           </div>
         </div>
@@ -101,7 +119,7 @@
       </div>
     </div>
   </div>
-  <div class="container container--full white available plan-destinasi plan-destinasi-detail op-plan-destinasi">
+  <div class="container container--full available white plan-destinasi plan-destinasi-detail op-plan-destinasi">
       <div class="container">
         <div class="ccw-head">
             <h1>Package Options</h1>
@@ -163,6 +181,7 @@
                 </div>
         </div>
     </div>
+  </div>
   <!-- tambahkan class op-plan-destinasi untuk mobile site -->
   <div class="container container--full white plan-destinasi plan-destinasi-detail op-plan-destinasi itinerary">
     <div class="container">
@@ -341,6 +360,90 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="container container--full white">
+    <div class="container">
+      <div class="ccw-head">
+          <h1>Gallery</h1>
+      </div>
+      <div class="detail-gallery">
+        <div class="swiper-container gallery-top swiper-container-horizontal">
+          <div class="swiper-wrapper">
+              <div class="swiper-slide swiper-slide-active">
+                <div class="slide-img-container" style="background-image: url('http://cdn.demo.fabthemes.com/kansas/files/2012/08/wallpaper-722590cp.jpg') ; "></div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide-img-container" style="background-image: url('http://miriadna.com/desctopwalls/images/max/At-the-brink-of-Alpes.jpg') ; "></div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide-img-container" style="background-image: url('https://www.ihdimages.com/wp-content/uploadsktz/2014/11/mountain_landscape_photography_hd_wallpapers.jpeg') ; "></div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide-img-container" style="background-image: url('https://i.ytimg.com/vi/zoozFV6SEvU/maxresdefault.jpg') ; "></div>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide-img-container" style="background-image: url('https://greatatmosphere.files.wordpress.com/2013/06/maroon-bells-at-sunrise-aspen-colorado-amazing-view-beautiful-travel-photography-nature-landscapes-colors.jpg?w=1600&h=1200') ; "></div>
+              </div>
+
+        </div>
+      </div>
+      <div class="swiper-container gallery-thumbs swiper-container-horizontal overflow_visible">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide swiper-slide-active">
+            <div class="slide-img-container js-imagepopup" style="background-image: url('http://cdn.demo.fabthemes.com/kansas/files/2012/08/wallpaper-722590cp.jpg') ; "></div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide-img-container js-imagepopup" style="background-image: url('http://miriadna.com/desctopwalls/images/max/At-the-brink-of-Alpes.jpg') ; "></div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide-img-container js-imagepopup" style="background-image: url('https://www.ihdimages.com/wp-content/uploadsktz/2014/11/mountain_landscape_photography_hd_wallpapers.jpeg') ; "></div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide-img-container js-imagepopup" style="background-image: url('https://i.ytimg.com/vi/zoozFV6SEvU/maxresdefault.jpg') ; "></div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide-img-container js-imagepopup" style="background-image: url('https://greatatmosphere.files.wordpress.com/2013/06/maroon-bells-at-sunrise-aspen-colorado-amazing-view-beautiful-travel-photography-nature-landscapes-colors.jpg?w=1600&h=1200') ; "></div>
+          </div>
+        </div>
+        <div class="swiper-button-next">
+          <i class="fa fa-chevron-right" aria-hidden="true"></i>
+        </div>
+        <div class="swiper-button-prev">
+          <i class="fa fa-chevron-left" aria-hidden="true"></i>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container container--full blue maps-wrap z15">
+    <div class="container">
+      <div class="ccw-head">
+          <h1>Lokasi</h1>
+      </div>
+      <div class="ccw-body">
+        <p>Gn. Tangkuban Parahu, Cikahuripan, Lembang, Kabupaten Bandung Barat, Jawa Barat</p>
+        <h5>Landmark Terdekat</h5>
+        <div class="ccw-ico">
+          <img src="./images/icon/ic-terminal.svg" alt="">
+          <p>Stasiun Bandung</p>
+        </div>
+        <div class="ccw-ico">
+          <img src="./images/icon/ic-bandara.svg" alt="">
+          <p>Husein Sastranegara</p>
+        </div>
+        <div class="ccw-ico">
+          <img src="./images/icon/ic-hotel.svg" alt="">
+          <p>Grand Hotel Lembang, Cisarua Hotel, Melati Hotel </p>
+        </div>
+        <div class="ccw-ico">
+          <img src="./images/icon/ic-restaurant.svg" alt="">
+          <p>Ayam Brebes Lembang, Oleh Oleh Lembang, Sapu Lidi</p>
+        </div>
+      </div>
+    </div>
+    <div class="maps-container maps">
+
     </div>
   </div>
   <div class="container container--full white z15">
