--- a/app/views/detail_hotel.html
+++ b/app/views/detail_hotel.html
@@ -47,6 +47,99 @@
   </div>
   <div class="container container--full white">
     <div class="container">
+      <div class="add--detail">
+        <div class="add--filter">
+          <div class="add--row">
+            <div class="form-group">
+              <label for="">Checkin</label>
+              <div class="input-group with-icon">
+                <div class="input-icon">
+                  <img src="images/icon/ic-calendar-default.svg" alt="Calendar icon">
+                </div>
+                <input type="text" placeholder="dd/mm/yyyy">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="">Durasi</label>
+              <div class="input-group select">
+                <select class="" name="">
+                  <option value="">Content</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="">Tamu</label>
+              <div class="input-group select">
+                <select class="" name="">
+                  <option value="">Content</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="">Kamar</label>
+              <div class="input-group select">
+                <select class="" name="">
+                  <option value="">Content</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group btn--container ">
+              <button class="btn btn--blue w-100 btn--medium">Kirim</button>
+            </div>
+          </div>
+        </div>
+        <h3>Pilih Kamar</h3>
+        <div class="add--table">
+          <div class="add--hotel_room row">
+            <div class="col-12 col-md-8">
+              <div class="add--box--left row">
+                <div class="col-5 col-md-3 add--images">
+                  <img src="./images/dummy/hotel-a.jpeg" alt="">
+                </div>
+                <div class="col-7 col-md-9 add--description">
+                  <div class="room--name">
+                    Deluxe Room
+                  </div>
+                  <div class="room--desc">
+                    Max 1 person, Sarapan Pagi Termasuk, Wifi Gratis
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-4">
+              <div class="row">
+                <div class="col-6">
+                  <div class="detail--price">
+                    <div class="price--disc">
+                      <div class="price--disc_price">
+                        Rp 240.000
+                      </div>
+                      <div class="price--disc_number">
+                        Disc 50%
+                      </div>
+                    </div>
+                    <div class="actual--price">
+                      Rp 120.000
+                    </div>
+                    <div class="price--desc">
+                      / kamar / malam
+                    </div>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <button class="btn btn--orange w-100 btn--medium">Pilih</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="container container--full white">
+    <div class="container">
       <div class="ccw-head">
           <h1>Informasi Tambahan</h1>
       </div>
@@ -102,7 +195,7 @@
             <div class="row">
               <div class="col-md-3">
                 <div class="ccw-img-container" style="background-image:url('./images/dummy/hotel-a.jpeg')">
-          
+
                 </div>
               </div>
               <div class="col-md-9">
@@ -116,7 +209,7 @@
             <div class="row">
               <div class="col-md-3">
                 <div class="ccw-img-container" style="background-image:url('./images/dummy/op-pict1.jpeg')">
-          
+
                 </div>
               </div>
               <div class="col-md-9">
@@ -130,7 +223,7 @@
             <div class="row">
               <div class="col-md-3">
                 <div class="ccw-img-container" style="background-image:url('./images/dummy/hotel-b.jpeg')">
-          
+
                 </div>
               </div>
               <div class="col-md-9">
