--- a/app/sass/pages/_detail_atraksi.scss
+++ b/app/sass/pages/_detail_atraksi.scss
@@ -663,3 +663,140 @@
     width: 100%;
   }
 }
+
+.add--detail{
+  padding : 15px;
+  background-color: white ;
+  .add--table{
+    border-bottom: solid 1px #e4e4e4;
+  }
+  .add--filter{
+    margin-bottom: 24px;
+    .add--row{
+      & > div {
+        flex-grow: 1 ;
+        padding-left: 8px;
+        padding-right: 8px;
+        @media (max-width: 600px){
+          flex-grow: 0;
+          width: 100% ;
+        }
+        label{
+          margin-bottom: 5px;
+        }
+        &.btn--container{
+          padding-top: 20px;
+        }
+      }
+    }
+  }
+  h3{
+    margin-bottom: 14px;
+  }
+  .add--hotel_room{
+     border-top: solid 1px #e4e4e4;
+     padding-top: 14px;
+     padding-bottom: 14px;
+  }
+  .add--row{
+    display: flex;
+    flex-direction: row;
+    margin-left: -8px;
+    margin-right: -8px;
+    @media(max-width: 600px){
+      flex-wrap: wrap;
+    }
+  }
+  .add--images{
+    width : 100% ;
+    overflow: hidden;
+    border-radius: 2px;
+    position: relative;
+    object-fit: cover;
+    @media (max-width: 800px){
+      margin-bottom: 24px;
+    }
+    img{
+      position: absolute;
+      object-fit: cover;
+    }
+    &:after{
+      content: '';
+      padding-top: 100%;
+      display: block;
+    }
+  }
+  .room--name{
+    font-size: 18px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    color: #3d3d3d;
+    margin-bottom : 8px;
+  }
+  .room--desc{
+    font-size: 15px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.33;
+    letter-spacing: normal;
+    color: #637381;
+  }
+  .row{
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  .detail--price{
+    text-align: left;
+    .price--disc{
+      display: flex;
+      flex-direction: row ;
+      text-align: left;
+      & > div{
+        flex-grow: 1 ;
+        &.price--disc_price{
+          font-size: 15px;
+          font-weight: normal;
+          font-style: normal;
+          font-stretch: normal;
+          line-height: 1;
+          letter-spacing: normal;
+          color: #637381;
+          text-decoration: line-through;
+        }
+        &.price--disc_number{
+          font-size: 15px;
+          font-weight: bold;
+          font-style: normal;
+          font-stretch: normal;
+          line-height: 1;
+          letter-spacing: normal;
+          color: #5b8ef4;
+        }
+      }
+    }
+    .actual--price{
+      font-size: 24px;
+      font-weight: 600;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1;
+      letter-spacing: normal;
+      color: #73bd67;
+      margin-bottom: 4px;
+      margin-top: 8px;
+    }
+    .price--desc{
+      font-size: 15px;
+      font-weight: normal;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1;
+      letter-spacing: normal;
+      color: #637381;
+    }
+  }
+}
