--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -45,7 +45,8 @@
   'components/cards',
   'components/modal',
   'components/forms',
-  'components/sidemenu';
+  'components/sidemenu',
+  'components/magic_box';
 
 // 6. Page-specific styles
 @import
