--- a/app/views/styleguide_form.html
+++ b/app/views/styleguide_form.html
@@ -79,5 +79,130 @@
           <button  class="qtyplus"></button>
         </div>
     </div>
+    <div class="magic-box-placeholder col-sm-12">
+      <div class="setrip-magic_box">
+        <div class="magic_box_content">
+          <div class="magic_content-plan">
+
+            <div class="row-inline">
+              <div class="inline-magic">
+                <h4>Buat Plan</h4>
+              </div>
+              <div class="inline-magic">
+                <div class="recomend--box">
+                  <div class="radio-area">
+                    <input type="radio" name="pengiriman" id="sicepat" required="" data-parsley-multiple="pengiriman" data-parsley-id="23">
+                    <label for="sicepat" class="">Buat Sendiri</label>
+                  </div>
+                  <div class="radio-area">
+                    <input type="radio" name="pengiriman" id="dhl" required="" data-parsley-multiple="pengiriman">
+                    <label for="dhl" class="active">Rekomendasi </label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="magic-inline-form row">
+              <div class="col-md-4">
+                <div class="form-group">
+                  <div class="input-group with-icon">
+                    <div class="input-icon">
+                      <img src="images/icon/ic-location.svg" alt="Calendar icon">
+                    </div>
+                    <input type="text" placeholder="Kemana">
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="form-group ">
+                  <div class="input-group select with-icon">
+                    <div class="input-icon">
+                      <img src="images/icon/ic-calendar-default.svg" alt="Calendar icon">
+                    </div>
+                    <select class="" name="">
+                      <option value="">Kapan</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="form-group">
+                  <div class="input-group with-icon">
+                    <div class="input-icon">
+                      <img src="images/icon/ic-person.svg" alt="Calendar icon">
+                    </div>
+                    <input type="text" placeholder="Berapa Orang">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="magic-inline-form row">
+              <div class="col-sm-8">
+                <div class="row-inline">
+                  <img class="inline-magic" src="images/icon/set.svg" alt="">
+                  <div class="inline-magic form-group transparent">
+                    <div class="input-group select">
+                      <select class="" name="">
+                        <option value="">Mau Ngapain Aja?</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <button class="btn btn--orange width-100">Buat Sekarang</button>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+        <div class="magic_box_navigation">
+          <div class="flex-magic">
+            <div class="magic_box_nav_square active">
+              <div class="magic-box_square_inner">
+                <img src="images/icon/walk.svg" alt="">
+                <div class="magic-box-nav-text">Plan</div>
+              </div>
+            </div>
+            <div class="magic_box_nav_square">
+              <div class="magic-box_square_inner">
+                <img src="images/icon/hotel.svg" alt="">
+                <div class="magic-box-nav-text">Hotel</div>
+              </div>
+            </div>
+            <div class="magic_box_nav_square">
+              <div class="magic-box_square_inner">
+                <img src="images/icon/airplane.svg" alt="">
+                <div class="magic-box-nav-text">Pesawat</div>
+              </div>
+            </div>
+            <div class="magic_box_nav_square">
+              <div class="magic-box_square_inner">
+                <img src="images/icon/train.svg" alt="">
+                <div class="magic-box-nav-text">kereta Api</div>
+              </div>
+            </div>
+            <div class="magic_box_nav_square">
+              <div class="magic-box_square_inner">
+                <img src="images/icon/airport.svg" alt="">
+                <div class="magic-box-nav-text">Hotel + Pesawat</div>
+              </div>
+            </div>
+            <div class="magic_box_nav_square">
+              <div class="magic-box_square_inner">
+                <img src="images/icon/boat.svg" alt="">
+                <div class="magic-box-nav-text">Aktifitas</div>
+              </div>
+            </div>
+            <div class="magic_box_nav_square">
+              <div class="magic-box_square_inner">
+                <img src="images/icon/car.svg" alt="">
+                <div class="magic-box-nav-text">Rental Mobil</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
