--- a/app/views/styleguide_form.html
+++ b/app/views/styleguide_form.html
@@ -146,6 +146,7 @@
                       </select>
                     </div>
                   </div>
+                  <img class="inline-magic" src="images/icon/set.svg" alt="">
                 </div>
               </div>
               <div class="col-sm-4">
