new homepage added

--- a/app/sass/components/_magic_box.scss
+++ b/app/sass/components/_magic_box.scss
@@ -1,3 +1,36 @@
+.magic--box--container{
+  padding-top: 40px;
+  padding-bottom: 40px;
+  .row > div{
+    position: relative;
+  }
+  h2{
+    text-align: right;
+    max-width : 400px;
+    position: absolute;
+    top: 50% ;
+    right: 40px;
+    transform: translateY(-50%);
+    font-size: 36px;
+  }
+  @media (max-width: 692px){
+    h2{
+      position: relative;
+      right: auto;
+      transform: translate(0);
+      top: auto;
+      display: block;
+      max-width: 100%;
+      text-align: left;
+      margin-bottom: 40px;
+    }
+  }
+}
+
+b{
+  font-weight: 700;
+}
+
 .magic-box-placeholder{
   margin-top: 40px;
 }
