--- a/app/views/homepage--new.html
+++ b/app/views/homepage--new.html
@@ -72,7 +72,7 @@
                         </select>
                       </div>
                     </div>
-                    <img class="inline-magic" src="images/icon/set.svg" alt="">
+                    <img class="inline-magic" src="images/icon/trip.svg" alt="">
                   </div>
                 </div>
                 <div class="col-sm-4">
